Bug resolution : people/contact for too large screen

--- a/themes/polarisTheme/assets/sass/main.scss
+++ b/themes/polarisTheme/assets/sass/main.scss
@@ -15,8 +15,9 @@ footer a {color:#a6d19e;}
 .result .signature {width:500px;margin: auto;background-color: white;padding:1rem;overflow: hidden;}
 
 .result .signature .logo {float:left;padding-right:1rem;border-right: 2px solid #3fc0f0;}
-.result .signature div {padding-left:1rem;float:left;width: 350px;}
-.result .signature .company {padding-top:0.5rem;}
+.result .signature .infos {float:left}
+.result .signature .people {padding-left:1rem;}
+.result .signature .company {padding-left:1rem; padding-top:0.5rem;}
 .result .signature a, .result .signature .people #out_name {color: #3fc0f0;text-decoration: none;}
 
 .copy {display:block;margin: 1rem auto;}
